<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_job_motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    app:layoutDescription="@xml/fragment_new_job_application_scene"
    tools:context=".ui.fragments.NewJobApplicationFragment">

    <ImageButton
        android:id="@+id/btn_back_to_job_applications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:minHeight="48dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/new_job_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxEms="5"
        android:text="@string/new_job_title"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_to_job_applications" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_job_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_job_title">

        <ImageView
            android:id="@+id/ic_job_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_job_position"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_job_position"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="55dp"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:focusedByDefault="false"
            android:hint="@string/hint_job_position"
            android:textColorHint="?attr/colorPrimary"
            app:boxStrokeColor="?attr/colorPrimary"
            app:hintTextColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/ic_job_position"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_job_position"
            app:layout_constraintTop_toTopOf="@+id/ic_job_position"
            app:layout_constraintVertical_bias="0.57">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_job_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="?attr/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ic_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_job_position"
            app:tint="?attr/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_company"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="55dp"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:focusedByDefault="false"
            android:hint="@string/hint_company"
            android:textColorHint="?attr/colorPrimary"
            app:boxStrokeColor="?attr/colorPrimary"
            app:hintTextColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/ic_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_company"
            app:layout_constraintTop_toTopOf="@+id/ic_company"
            app:layout_constraintVertical_bias="0.57">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="?attr/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ic_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_company"
            app:tint="?attr/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="55dp"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:focusedByDefault="false"
            android:hint="@string/hint_location"
            android:textColorHint="?attr/colorPrimary"
            app:boxStrokeColor="?attr/colorPrimary"
            app:hintTextColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/ic_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_location"
            app:layout_constraintTop_toTopOf="@+id/ic_location"
            app:layout_constraintVertical_bias="0.57">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="?attr/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ic_application_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_location"
            app:tint="?attr/colorPrimary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_application_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="55dp"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:focusedByDefault="false"
            android:hint="@string/hint_application_date"
            android:textColorHint="?attr/colorPrimary"
            app:boxStrokeColor="?attr/colorPrimary"
            app:hintTextColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/ic_application_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_application_date"
            app:layout_constraintTop_toTopOf="@+id/ic_application_date"
            app:layout_constraintVertical_bias="0.57">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_application_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date"
                android:textColor="?attr/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_reset_status"
            android:textAllCaps="false"
            android:visibility="gone"
            app:icon="@drawable/ic_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/il_application_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_new_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_check"
        android:tint="?attr/colorPrimary"
        app:backgroundTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@+id/new_job_layout"
        app:layout_constraintTop_toTopOf="@+id/new_job_layout"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.motion.widget.MotionLayout>