<resources>
    <string name="app_name">JAM</string>
    <string name="get_started_title1">Welcome</string>
    <string name="get_started_title2">to JAM</string>
    <string name="get_started_subtitle">Your simple job application manager</string>
    <string name="txt_get_started_swipe_to_continue">Swipe down to continue</string>
    <string name="new_job_title">New Opportunity!</string>
    <string name="edit_job_title">Edit Opportunity</string>
    <string name="hint_job_position">Job position</string>
    <string name="hint_company">Company</string>
    <string name="hint_location">Localization</string>
    <string name="hint_application_date">Application date</string>
    <string name="btn_reset_status">Reset Status</string>
    <string name="btn_reset_status_done">Done!</string>
    <string name="pending_status">Pending</string>
    <string name="accepted_status">Accepted</string>
    <string name="rejected_status">Rejected</string>
    <string name="date_picker_title">Select the Application Date</string>
    <string name="add_new_job_application_error">Fill in all the fields, please</string>
    <string name="status_filter_menu_all">All</string>
    <string name="status_filter_menu_pending">Pending</string>
    <string name="status_filter_menu_accepted">Accepted</string>
    <string name="status_filter_menu_rejected">Rejected</string>
    <string name="clean_alert_dialog_title">Warning!</string>
    <string name="clean_alert_dialog_message">You\'re about to delete all accepted and rejected applications. Do you want to continue?</string>
    <string name="clean_alert_dialog_positive_button_text">Clean</string>
    <string name="clean_alert_dialog_negative_button_text">Cancel</string>
</resources>